# CongShed

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  pyproject.toml
apps/: kv_migration_demo.cpp  kv_migration_demo.py  main.cpp  main.rs  simulate_serving.py
cpp/: CMakeLists.txt  hics_demo
cpp/include/hics/: lstm_predictor.hpp  path_engine.hpp  shim.hpp  telemetry.hpp  topology.hpp  types.hpp
cpp/src/: lstm_predictor.cpp  main.cpp  path_engine.cpp  shim.cpp  telemetry.cpp  topology.cpp
hics/: __init__.py
lstm/: __init__.py  lstm_model.py  lstm_predictor.cpp  lstm_predictor.hpp  lstm_predictor.rs  trainer.py
model/: __init__.py  model.hpp  model.rs
path_engine/: __init__.py  path_engine.cpp  path_engine.hpp  path_engine.rs
profiler/: __init__.py
python/: pyproject.toml
python/examples/: simulate_serving.py
python/hics/: __init__.py  lstm_model.py  path_engine.py  profiler.py  topology.py  trainer.py  types.py
rust/: Cargo.toml
rust/src/: lib.rs  lstm_predictor.rs  path_engine.rs  topology.rs  types.rs
shim/: cuda_mr.cpp  cuda_mr.hpp  ibverbs_transport.cpp  ibverbs_transport.hpp  nccl_plugin.cpp  nccl_plugin.hpp  shim.cpp  shim.hpp  shim.rs  ucx_transport.cpp  ucx_transport.hpp
src/: lib.rs
telemetry/: hw_counters.cpp  hw_counters.hpp  ib_mad.cpp  ib_mad.hpp  pmu_counters.cpp  pmu_counters.hpp  telemetry.cpp  telemetry.hpp  telemetry.rs
topology/: __init__.py  topology.cpp  topology.hpp  topology.rs
transfer/: transfer_executor.cpp  transfer_executor.hpp
