[project]
name = "hics"
version = "1.0.0"
description = "Heterogeneous Interconnect Congestion-aware Scheduler — Python training & tooling"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "hics",
    "hics.types",
    "hics.topology",
    "hics.path_engine",
    "hics.profiler",
    "hics.lstm",
]

[tool.setuptools.package-dir]
"hics" = "hics"
"hics.types" = "model"
"hics.topology" = "topology"
"hics.path_engine" = "path_engine"
"hics.profiler" = "profiler"
"hics.lstm" = "lstm"
