[package]
name = "hics"
version = "1.0.0"
edition = "2021"
description = "Heterogeneous Interconnect Congestion-aware Scheduler for LLM serving"
license = "MIT"

[lib]
name = "hics"
path = "src/lib.rs"

[[bin]]
name = "hics-demo"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"
